--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,9 @@
           <%= link_to 'Home', new_book_path %>
         </li>
         <li>
+          <%= link_to 'マイページ', user_path(current_user.id) %>    
+        </li>
+        <li>
           <%= link_to "Log out", destroy_user_session_path, method: :delete %>
         </li>
       <% else %>
