--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,12 @@
 <% @books.each do |book| %>
   <div>
     
-    <p><%= image_tag 'no_image.jpg' %></p>
+    <p><%= image_tag book.user.get_profile_image(100,100)  %></p>
+    
     <%= link_to book_path(book.id) do %>
       <p> <%= book.title%> </p>
     <% end %>
+    
     <p><%= book.opinion%> </p>
     <p><%= book.user.name %></p>
   </div>
