--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,7 @@
 <div>
-  <p><%= image_tag 'no_image.jpg' %></p>
+  <p><%= image_tag @post_image.user.get_profile_image(100,100) %></p>
   <p><%= @book.user.name %></p>
+  
   <%= link_to book_path(@book.id) do %>
     <p><%= @book.title%></p>
   <% end %>
