--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,16 @@
     <header>
       <!-- 6章-->
       <% if user_signed_in? %>
+        
+        <p>Bookers</p><br>
         <li>
           <%= link_to 'Home', new_book_path %>
         </li>
         <li>
-          <%= link_to 'マイページ', user_path(current_user.id) %>    
+          <%= link_to 'Users', books_path %>
+        </li>        
+        <li>
+          <%= link_to 'Books', user_path(current_user.id) %>    
         </li>
         <li>
           <%= link_to "Log out", destroy_user_session_path, method: :delete %>
