--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,13 +17,13 @@
         
         <p>Bookers</p><br>
         <li>
-          <%= link_to 'Home', new_book_path %>
+          <%= link_to 'Home', user_path(current_user.id) %>
         </li>
         <li>
           <%= link_to 'Users', books_path %>
         </li>        
         <li>
-          <%= link_to 'Books', user_path(current_user.id) %>    
+          <%= link_to 'Books', new_book_path   %>    
         </li>
         <li>
           <%= link_to "Log out", destroy_user_session_path, method: :delete %>
