--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,10 +20,10 @@
           <%= link_to 'Home', user_path(current_user.id) %>
         </li>
         <li>
-          <%= link_to 'Users', books_path %>
+          <%= link_to 'Users', users_path %>
         </li>        
         <li>
-          <%= link_to 'Books', new_book_path   %>    
+          <%= link_to 'Books', books_path %>    
         </li>
         <li>
           <%= link_to "Log out", destroy_user_session_path, method: :delete %>
