[Finish]base-all

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,7 +10,7 @@
     
     <p><%= image_tag book.user.get_profile_image(100,100)  %></p>
 
-    <p><%= link_to 'book.title' %></p>
+    <p><%= link_to book.title, book_path(book) %></p>
     <p><%= book.opinion %></p>
 
   </div>
