[Finish]before_login_css

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,22 +1,21 @@
-<div class="container">
-  <div class="row">
-    <div class="mx-auto">
-      <h1>welcome to <i class="fa-solid fa-book"></i><strong>Bookers!!</strong></h1>
-      <p>In <i class="fa-solid fa-book"></i><strong>Bookers!!</strong></p>
-      <p>you can share and exchange your opinions, inpressions, and emotions</p><br>
-      <p>about various books!</p>
-    </div>
-    
-    <div class="btn-wrapper col-8 mx-auto">
-      <div class="row mb-3">
-        <a role="button" class="btn btn-info btn-block" href="/users/sign_in">Log in</a>
-      </div>
-      <div class="row">
-         <a role="button" class="btn btn-success btn-block" href="/users/sign_up">Sign up</a>
-      </div>
-    
-    </div>
+  
+<div class="col-10 offset-5">
+  <h1>welcome to <i class="fa-solid fa-book"></i><strong>Bookers!!</strong></h1>
+  <p>In <i class="fa-solid fa-book"></i><strong>Bookers!!</strong></p>
+  <p>you can share and exchange your opinions, inpressions, and emotions</p><br>
+  <p>about various books!</p>
+</div>
+
+
+
+<div class="btn-wrapper col-10 offset-3">
+  <div class="row mb-3">
+    <a role="button" class="btn btn-info btn-block" href="/users/sign_in">Log in</a>
   </div>
+  <div class="row">
+     <a role="button" class="btn btn-success btn-block" href="/users/sign_up">Sign up</a>
+  </div>
+
 </div>
 
 
