--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,7 +1,5 @@
-<div class="container m-3">
-  <div class="row">
-    <div class="mx-auto">
-      <h1>welcome to <i class="fa-solid fa-book"></i><strong>Bookers!!</strong></h1>
-    </div>  
-  </div>
-</div>
+
+<div class="col-10 offset-5">
+  <h1>welcome to <i class="fa-solid fa-book"></i><strong>Bookers!!</strong></h1>
+</div>  
+
