--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,9 +88,12 @@
       </nav>
     </header>
     
-    <div class="container">
-      <%= yield %>
+    <div class="container m-3 mx-auto">
+      <div class="row">
+        <%= yield %>
+      </div>
     </div>
+
  
   </body>
   
