--- a/app/views/shared/_new.html.erb
+++ b/app/views/shared/_new.html.erb
@@ -1,12 +1,19 @@
 <div>
-  <h1>New book</h1>
+  <h2 class="mt-3">New book</h2>
   <%= form_with model: book do |f| %>
-    <h5>Title</h5>
-    <%= f.text_field :title %>
-  
-    <h5>Opinion</h5>
-    <%= f.text_area :opinion %> 
-  
-    <%= f.submit '投稿' %>
+    <div class="mt-3">
+      <label>Title</label><br>
+      <%= f.text_field :title %>
+    </div>
+    
+    <div class="mt-3">
+      <label>Opinion</label><br>
+      <%= f.text_area :opinion %>
+    </div>
+     
+    <div class="mt-3">
+      <%= f.submit 'Create Book', class: 'btn btn-success' %>
+    </div>
+    
   <% end %>
 </div>
