--- a/app/views/shared/_user.html.erb
+++ b/app/views/shared/_user.html.erb
@@ -2,13 +2,22 @@
   <h3>User info</h3>
   <%= image_tag user.get_profile_image(100,100) %>
   
-  <h4>name <%= user.name %></h4>
-  <h4>introduction <%= user.introduction %></h4>
-  <% if user == current_user %>
-    <p><%= link_to "プロフィール編集", edit_user_path(user) %> </p>
-  <% end %>
-</div>
+  <table class="table">
+    <tr>
+      <th class="nav-list">name</th>
+      <td><%= user.name %></td>
+    </tr>
+    <tr>
+      <th class="nav-list">introduction</th>
+      <td><%= user.introduction %></td>
+    </tr>
+  </table>
   
-
-
-
+  
+  <% if user == current_user %>
+    <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-lg d-flex justify-content-center align-items-center" do %>
+      <i class="fa-solid fa-user-gear"></i>
+    <% end %>
+  <% end %>
+  
+</div>
