--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,3 @@
-
 <!-- sidebar -->
 <div class="col-md-3">
   <div class="sidebar">
@@ -15,11 +14,11 @@
     <tr>
       <th></th>
       <th class="nav-list">Title</th>
-      <th class="nav-list">Body</th>
+      <th class="nav-list">Opinion</th>
     </tr>
     <% @books.each do |book| %>
     <tr>
-      <td><%= image_tag book.user.get_profile_image(100,100)  %></td>
+      <td><%= image_tag book.user.get_profile_image(100,100)%></td>
       <td><%= link_to book.title, book_path(book) %></td>
       <td><%= book.opinion %></td>
     </tr>
