--- a/app/views/shared/_user.html.erb
+++ b/app/views/shared/_user.html.erb
@@ -13,11 +13,12 @@
     </tr>
   </table>
   
-  
-  <% if user == current_user %>
-    <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-lg d-flex justify-content-center align-items-center" do %>
-      <i class="fa-solid fa-user-gear"></i>
+  <div class= "mt-4">
+    <% if user == current_user %>
+      <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-lg d-flex justify-content-center align-items-center" do %>
+        <i class="fa-solid fa-user-gear"></i>
+      <% end %>
     <% end %>
-  <% end %>
+  </div>
   
 </div>
