--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,29 @@
 <!-- sidebar -->
-<div class="sidebar">
-  <%= render 'shared/user', user: @user %>
-  <%= render 'shared/new', book: @book %>
+<div class="col-md-3">
+  <div class="sidebar">
+    <%= render 'shared/user', user: @user %>
+    <%= render 'shared/new', book: @book %>
+  </div>
 </div>
 
 
-<% @users.each do |user| %>
-  <div>
+<div class="col-md-8 offset-md-1">
+  <h2>Users</h2>
+  <table class="table">
+    <tr>
+      <th class="nav-list">image</th>
+      <th class="nav-list">name</th>
+      <th></th>
+    </tr>
     
-    <p><%= image_tag user.get_profile_image(100,100)  %></p>
-
-    <p><%= user.name %></p>
-    <p><%= link_to 'show', user_path(user) %></p>
-  </div>
-<% end %>
+    
+    <% @users.each do |user| %>
+    <tr>
+      <td><%= image_tag user.get_profile_image(100,100) %></td>
+      <td><%= user.name %></td>
+      <td><%= link_to 'show', user_path(user) %></td>
+    </tr>
+    <% end %>
+  </table>
+  
+</div>
