--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,20 +1,41 @@
 <!-- sidebar -->
-<div class="sidebar">
-  <%= render 'shared/user', user: @user %>
-  <%= render 'shared/new', book: @book %>
+<div class="col-md-3">
+  <div class="sidebar">
+    <%= render 'shared/user', user: @user %>
+    <%= render 'shared/new', book: @book %>
+  </div>
 </div>
 
+<!-- Book detail-->
+<div class="col-md-8 offset-md-1">
+  <h2>Book detail</h2>
+  <table class="table">
+    <tr>
+      <td>
+        <div>
+          <%= image_tag @user.get_profile_image(100,100) %>
+          <p>
+            <%= link_to @book.user.name, books_path %>
+          </p>
+        </div>
+      </td>
+      
+      <td><%= link_to @book.title, book_path(@book.id) %></td>
+      <td><%= @book.opinion%></td>
+      
+      <% if @book.user == current_user %>
+      <td>
+          <button type="button" class="btn btn-success btn-sm">
+            <%= link_to "Edit", edit_book_path(@book), class:"text-white" %>
+          </button>
+      </td>
+      <td>
+          <button type="button" class="btn btn-danger btn-sm">
+            <%= link_to "Destroy", book_path(@book), method: :delete, class:"text-white" %>
+          </button>
+      </td>
+      <% end %>
+    </tr>
+  </table>
 
-<div>
-  <p><%= image_tag @user.get_profile_image(100,100) %></p>
-  <p><%= @book.user.name %></p>
-  
-  <%= link_to book_path(@book.id) do %>
-    <p><%= @book.title%></p>
-  <% end %>
-  <p><%= @book.opinion%></p>
-  
-  <% if @book.user == current_user %>
-    <%= link_to "Destroy", book_path(@book), method: :delete %>
-  <% end %>
 </div>
