--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,26 @@
-<h2>User info</h2>
-<%= form_with model: @user do |f| %>
-  <label for="inputName">Name</label><br>
-  <%= f.text_field :name, autofocus: true, id:"inputName"%><br>
-  <label for="inputImage">Image</label><br>
-  <%= f.file_field :profile_image, accept: "image/*" %><br>
-  <label for="inputIntroduction">Introduction</label><br>
-  <%= f.text_area :introduction,autofocus: true%><br>
-  <%= f.submit "Update User" %>
-<% end %>
+<div class="col-md-5 offset-md-3 ">
+  <h1 class="mt-3">User info</h1>
+  
+    <%= form_with model: @user do |f| %>
+      <div class="form">
+        <label>Name</label><br>
+        <%= f.text_field :name, autofocus: true, id:"inputName", class:"form-control"%>
+      </div>
+      
+      <div class="form">
+        <label>Image</label><br>
+        <%= f.file_field :profile_image, accept: "image/*" %><br>
+      </div>
+      
+      <div class="form">
+        <label>Introduction</label><br>
+        <%= f.text_area :introduction,autofocus: true, class:"form-control"%>
+      </div>
+      
+      <div class="mt-3">
+        <%= f.submit "Update User", class:"btn btn-secondary" %>
+      </div>
+      
+  <% end %>
+
+</div>
