--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,15 @@
 <div class="col-md-5 offset-md-3 ">
   <h1 class="mt-3">Editing Book</h1>
+  <% if @book.errors.any? %>
+    <div class="error-box">
+      <h3><%= @book.errors.count %> errors prohibited this obj from being saved:</h3>
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 
   <%= form_with model: @book do |f| %>
     <div class="form">
