--- a/app/views/shared/_new.html.erb
+++ b/app/views/shared/_new.html.erb
@@ -3,12 +3,12 @@
   <%= form_with model: book do |f| %>
     <div class="mt-3">
       <label>Title</label><br>
-      <%= f.text_field :title %>
+      <%= f.text_field :title, class:"form-control"%>
     </div>
     
     <div class="mt-3">
       <label>Opinion</label><br>
-      <%= f.text_area :opinion %>
+      <%= f.text_area :opinion, class:"form-control" %>
     </div>
      
     <div class="mt-3">
