--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,17 @@
+
 <div class="col-md-5 offset-md-3 ">
   <h1 class="mt-3">User info</h1>
+  <% if @user.errors.any? %>
+    <div class="error-box">
+      <h3><%= @user.errors.count %> errors prohibited this obj from being saved:</h3>
+      <ul>
+        <% @user.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+  
   
     <%= form_with model: @user do |f| %>
       <div class="form">
