--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -19,7 +19,7 @@
     
     <div class="form">
       <label>Opinion</label><br>
-      <%= f.text_area :opinion, class:"form-control"%>
+      <%= f.text_area :body, class:"form-control"%>
     </div>
     
     <div class="mt-3">
