--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -30,9 +30,13 @@
     </tr>
     <% @books.each do |book| %>
     <tr>
-      <td><%= image_tag book.user.get_profile_image(100,100)%></td>
+      <td>
+        <%= link_to user_path(book.user) do %>
+          <%= image_tag book.user.get_profile_image(100,100)%>
+        <% end %>
+      </td>
       <td><%= link_to book.title, book_path(book) %></td>
-      <td><%= book.opinion %></td>
+      <td><%= book.body %></td>
     </tr>
     <% end %>
   </table>
