--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,13 +59,13 @@
               
               <% else %>
               <li class="nav-item">
-                <%= link_to  homes_top_path, class: "nav-link text-light" do %>
+                <%= link_to  root_path, class: "nav-link text-light" do %>
                   <i class="fa-solid fa-house" style="color:white"></i> Home
                 <% end %>
               </li>
               
               <li class="nav-item">
-                <%= link_to  homes_about_path, class: "nav-link text-light" do %>
+                <%= link_to  home_about_path, class: "nav-link text-light" do %>
                   <i class="fa-solid fa-link" style="color:white"></i> About
                 <% end %>
               </li>
