--- a/app/views/shared/_new.html.erb
+++ b/app/views/shared/_new.html.erb
@@ -8,7 +8,7 @@
     
     <div class="mt-3">
       <label>Opinion</label><br>
-      <%= f.text_area :opinion, class:"form-control" %>
+      <%= f.text_area :body, class:"form-control" %>
     </div>
      
     <div class="mt-3">
