--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,7 @@
     <tr>
       <td><%= image_tag book.user.get_profile_image(100,100) %></td>
       <td><%= link_to book.title, book_path(book) %></td>
-      <td><%= book.opinion %></td>
+      <td><%= book.body %></td>
     </tr>
     <% end %>
   </table>
