--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,5 +1,5 @@
 
-<div class="col-10 offset-5">
-  <h1>welcome to <i class="fa-solid fa-book"></i><strong>Bookers!!</strong></h1>
+<div class="col-10 offset-3">
+  <h1>Welcome to <i class="fa-solid fa-book"></i><strong>Bookers!!</strong></h1>
 </div>  
 
