--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -32,12 +32,16 @@
     <tr>
       <td>
         <%= link_to user_path(book.user) do %>
-          <%= image_tag book.user.get_profile_image(100,100)%>
+          <%= image_tag(book.user.get_profile_image(100,100), alt:"Profile Image") %>
         <% end %>
       </td>
+
+      
       <td><%= link_to book.title, book_path(book) %></td>
       <td><%= book.body %></td>
     </tr>
+    
     <% end %>
+    
   </table>
 </div>
