--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,5 +1,5 @@
   
-<div class="col-10 offset-5">
+<div class="col-10 offset-3">
   <h1>welcome to <i class="fa-solid fa-book"></i><strong>Bookers!!</strong></h1>
   <p>In <i class="fa-solid fa-book"></i><strong>Bookers!!</strong></p>
   <p>you can share and exchange your opinions, inpressions, and emotions</p><br>
@@ -8,15 +8,19 @@
 
 
 
-<div class="btn-wrapper col-10 offset-3">
-  <div class="row mb-3">
-    <a role="button" class="btn btn-info btn-block" href="/users/sign_in">Log in</a>
+<div class="btn-wrapper col-10 mx-auto">
+  <div class="row mb-3 justify-content-center">
+    <div class="col-6">
+      <a role="button" class="btn btn-info btn-sm w-100" href="/users/sign_in">Log in</a>
+    </div>
   </div>
-  <div class="row">
-     <a role="button" class="btn btn-success btn-block" href="/users/sign_up">Sign up</a>
+  <div class="row justify-content-center">
+    <div class="col-6">
+      <a role="button" class="btn btn-success btn-sm w-100" href="/users/sign_up">Sign up</a>
+    </div>
   </div>
-
 </div>
+
 
 
 
