--- a/app/views/shared/_user.html.erb
+++ b/app/views/shared/_user.html.erb
@@ -15,7 +15,12 @@
   
   <div class= "mt-4">
     <% if user == current_user %>
-      <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-lg d-flex justify-content-center align-items-center" do %>
+      <%= link_to edit_user_path(user), title: "",class: "btn btn-outline-secondary btn-lg d-flex justify-content-center align-items-center" do %>
+        <i class="fa-solid fa-user-gear"></i>
+      <% end %>
+    <% else %>
+      <!--他人の編集ページへのリンク-->
+      <%= link_to edit_user_path(user), title: "" ,class: "btn btn-outline-secondary btn-lg d-flex justify-content-center align-items-center" do %>
         <i class="fa-solid fa-user-gear"></i>
       <% end %>
     <% end %>
