--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,11 @@
    
     <% @books.each do |book| %>
     <tr>
-      <td><%= image_tag book.user.get_profile_image(100,100) %></td>
+      <td>
+        <%= link_to user_path(book.user) do %>
+          <%= image_tag(book.user.get_profile_image(100,100), alt:"Profile Image") %>
+        <% end %>
+      </td>
       <td><%= link_to book.title, book_path(book) %></td>
       <td><%= book.body %></td>
     </tr>
