--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -35,10 +35,10 @@
           <%= image_tag(book.user.get_profile_image(100,100), alt:"Profile Image") %>
         <% end %>
       </td>
-
-      
       <td><%= link_to book.title, book_path(book) %></td>
       <td><%= book.body %></td>
+      
+      <td>コメント数: <%= book.book_comments.count %></td>
     </tr>
     
     <% end %>
