--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -38,7 +38,10 @@
       <td><%= link_to book.title, book_path(book) %></td>
       <td><%= book.body %></td>
       
+      <td><%= render 'shared/favorite', book: book %></td>
       <td>コメント数: <%= book.book_comments.count %></td>
+      
+      </td>
     </tr>
     
     <% end %>
