--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,76 +1,76 @@
 <!-- sidebar -->
 <div class="col-md-3">
-  <div class="sidebar">
-    <%= render 'shared/user', user: @user %>
-    <%= render 'shared/new', book: @book_new %>
-  </div>
+	<div class="sidebar">
+		<%= render 'shared/user', user: @user %>
+		<%= render 'shared/new', book: @book_new %>
+	</div>
 </div>
 
 <!-- Book detail-->
 <div class="col-md-8 offset-md-1">
-  <h2>Book detail</h2>
-  <table class="table">
-    <tr>
-      <td>
-        <div>
-            <%= image_tag(@user.get_profile_image(50,50))%>
-          <p>
-            <%= link_to @book.user.name, user_path(@book.user) %>
-          </p>
-        </div>
-      </td>
-      
-      <td><%= link_to @book.title, book_path(@book.id) %></td>
-      <td><%= @book.body%></td>
-      
-      <td>コメント数: <%= @book.book_comments.count %></td>
-      
-      
-      <% if @book.user == current_user %>
-        <td>
-            <button type="button" class="btn btn-success btn-sm">
-              <%= link_to "Edit", edit_book_path(@book), class:"text-white" %>
-            </button>
-        </td>
-        <td>
-            <button type="button" class="btn btn-danger btn-sm">
-              <%= link_to "Destroy", book_path(@book), method: :delete, class:"text-white" %>
-            </button>
-        </td>
-      <% end %>
-      
-    </tr>
-  </table>
-  
-  
-  <!-- Book comment-->
-  <table>
-    <% @book.book_comments.each do |book_comment| %>
-      <tr>
-        <td>
-          <div>
-            <%= image_tag(@user.get_profile_image(50,50))%>
-            <p><%= link_to @book.user.name, user_path(@book.user) %></p>
-          </div>
-        </td>
-        <td><%= book_comment.comment %></td>
-        
-        <% if book_comment.user == current_user %>
-          <td>
-            <button type="button" class="btn btn-danger btn-sm">
-              <%= link_to "Destroy", book_book_comment_path(book_comment.book,book_comment), method: :delete, class:"text-white" %>
-            </button>
-          </td>
-        <% end %>
-      </tr>
-    <% end %>
-  </table>
-  
-  
-  <!--Comment form-->
-  <%= form_with model: [@book, @book_comment] do |f| %>
-    <%= f.text_area :comment, rows: '5', placeholder:"comment here", class: "w-100" %>
-    <%= f.submit "送信" %>
-  <% end %>
+	<h2>Book detail</h2>
+	<table class="table">
+		<tr>
+			<td>
+				<div>
+						<%= image_tag(@user.get_profile_image(50,50))%>
+					<p>
+						<%= link_to @book.user.name, user_path(@book.user) %>
+					</p>
+				</div>
+			</td>
+			
+			<td><%= link_to @book.title, book_path(@book.id) %></td>
+			<td><%= @book.body%></td>
+			<td><%= render 'shared/favorite', book: @book %></td>
+			<td>コメント数: <%= @book.book_comments.count %></td>
+			
+			
+			<% if @book.user == current_user %>
+				<td>
+						<button type="button" class="btn btn-success btn-sm">
+							<%= link_to "Edit", edit_book_path(@book), class:"text-white" %>
+						</button>
+				</td>
+				<td>
+						<button type="button" class="btn btn-danger btn-sm">
+							<%= link_to "Destroy", book_path(@book), method: :delete, class:"text-white" %>
+						</button>
+				</td>
+			<% end %>
+			
+		</tr>
+	</table>
+	
+	
+	<!-- Book comment-->
+	<table>
+		<% @book.book_comments.each do |book_comment| %>
+			<tr>
+				<td>
+					<div>
+						<%= image_tag(@user.get_profile_image(50,50))%>
+						<p><%= link_to @book.user.name, user_path(@book.user) %></p>
+					</div>
+				</td>
+				<td><%= book_comment.comment %></td>
+				
+				<% if book_comment.user == current_user %>
+					<td>
+						<button type="button" class="btn btn-danger btn-sm">
+							<%= link_to "Destroy", book_book_comment_path(book_comment.book,book_comment), method: :delete, class:"text-white" %>
+						</button>
+					</td>
+				<% end %>
+			</tr>
+		<% end %>
+	</table>
+	
+	
+	<!--Comment form-->
+	<%= form_with model: [@book, @book_comment] do |f| %>
+		<%= f.text_area :comment, rows: '5', placeholder:"comment here", class: "w-100" %>
+		<%= f.submit "送信" %>
+	<% end %>
 
 </div>
