--- a/app/views/shared/_favorite.html.erb
+++ b/app/views/shared/_favorite.html.erb
@@ -1,13 +1,13 @@
 <div>  
   <% if book.favorited_by?(current_user) %>
       <%= link_to book_favorite_path(book),method: :delete do %>
-        <i class="fa-solid fa-heart"></i>
-        <%= book.favorites.count %> 
+        <i class="fa-solid fa-heart" style="color: red;"></i>
+        <span class="text-danger"><%= book.favorites.count %></span> 
       <% end %>
     <% else %>
       <%=link_to book_favorite_path(book), method: :post do %>
-        ❤ 
-        <%= book.favorites.count %> 
+        <i class="fa-solid fa-heart" ></i>
+        <span class="text-primary"><%= book.favorites.count %></span> 
       <% end %>
     <% end %>
 </div>
