--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -50,7 +50,7 @@
 				<td>
 					<div>
 						<%= image_tag(@user.get_profile_image(50,50))%>
-						<p><%= link_to @book.user.name, user_path(@book.user) %></p>
+						<p><%= link_to book_comment.user.name, user_path(@book.user) %></p>
 					</div>
 				</td>
 				<td><%= book_comment.comment %></td>
