--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,6 +26,9 @@
       </td>
       <td><%= link_to book.title, book_path(book) %></td>
       <td><%= book.body %></td>
+      <td><%= render 'shared/favorite', book: book %></td>
+      <td>コメント数: <%= book.book_comments.count %></td>
+      
     </tr>
     <% end %>
   </table>
